administracion de usuario

--- a/ScoreZone.Web/Views/Account/Login.cshtml
+++ b/ScoreZone.Web/Views/Account/Login.cshtml
@@ -38,6 +38,7 @@
                         </div>
                         <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Iniciar sesión</button>
                         <hr class="my-4">
+                         <a class="btn btn-lg  btn-block text-uppercase btn-info" href="@Url.Action("Register","Account")"><i class="fab fa-google mr-2"></i> Sign in</a>
                         @*<button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
                         <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>*@
                     </form>
